fixing background not showing on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,7 +2,7 @@ body {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../../src/images/background.jpg");
 
     /* Background image is centered vertically and horizontally at all times */
-    background-position: center center;
+    /* background-position: center center; */
     background-repeat: no-repeat;
 
     /* Background image is fixed in the viewport so that it doesn't move when 
