--- a/src/css/Introduction.css
+++ b/src/css/Introduction.css
@@ -7,7 +7,7 @@
     width: 80%;
     margin: auto;
     color: white;
-    padding: 4em 0;
+    padding: 0 0 4em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
